--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Timer</string>
     <string name="replay_button">Replay Button</string>
     <string name="emptyTime">00:00:00</string>
+    <string name="uiTime">%1$s:%2$s:%3$s</string>
 </resources>
