--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="replay_button">Replay Button</string>
     <string name="emptyTime">00:00:00</string>
     <string name="uiTime">%1$s:%2$s:%3$s</string>
+    <string name="_00">00</string>
+    <string name="hours">Hours</string>
+    <string name="minutes">Minutes</string>
+    <string name="seconds">Seconds</string>
+    <string name="set">Set</string>
+    <string name="set_time">Set Time</string>
 </resources>
